# app/Filament/Resources/ContactUsResource/Pages/EditContactUs.php
@@ -1,0 +1,18 @@
+<?php
+
+namespace App\Filament\Resources\ContactUsResource\Pages;
+
+use App\Filament\Resources\ContactUsResource;
+use Filament\Actions;
+use Filament\Resources\Pages\EditRecord;
+
+class EditContactUs extends EditRecord
+{
+    protected static string $resource = ContactUsResource::class;
+
+    protected function getHeaderActions(): array
+    {
+        return [
+        ];
+    }
+}
