# app/Filament/Resources/ContactUsResource/Pages/ViewContactUs.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Filament\Resources\ContactUsResource\Pages;
+
+use App\Filament\Resources\ContactUsResource;
+use Filament\Actions;
+use Filament\Resources\Pages\ViewRecord;
+
+class ViewContactUs extends ViewRecord
+{
+    protected static string $resource = ContactUsResource::class;
+
+    protected function getHeaderActions(): array
+    {
+        return [
+            Actions\EditAction::make()
+                ->label('ویرایش'),
+        ];
+    }
+}
