# app/Http/Requests/ContactUsRequest.php
@@ -1,0 +1,44 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class ContactUsRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'first_name' => 'nullable|string|max:191',
+            'last_name' => 'nullable|string|max:191',
+            'email' => 'nullable|email|max:191',
+            'phone' => 'nullable|string|max:191',
+            'body' => 'required|string|min:10',
+        ];
+    }
+
+    /**
+     * Get custom messages for validator errors.
+     */
+    public function messages(): array
+    {
+        return [
+            'body.required' => 'متن پیام الزامی است.',
+            'body.min' => 'متن پیام باید حداقل ۱۰ کاراکتر باشد.',
+            'email.email' => 'فرمت ایمیل صحیح نیست.',
+        ];
+    }
+}
